# ebpf_all

./: Cargo.toml  README.md  control_plane_schema.sql  openapi.yaml  overview_design.md  product.md
.cargo/: config.toml
crates/uof-agent/: Cargo.toml
crates/uof-agent/src/: admin_api.rs  bootstrap.rs  config.rs  control_plane_client.rs  event_pipeline.rs  health.rs  lib.rs  main.rs  metrics_collector.rs  probe_manager.rs
crates/uof-cli/: Cargo.toml
crates/uof-cli/src/: main.rs
crates/uof-cli/src/commands/: mod.rs
crates/uof-common/: Cargo.toml
crates/uof-common/src/: config.rs  error.rs  lib.rs  telemetry.rs
crates/uof-control-api/: Cargo.toml
crates/uof-control-api/src/: lib.rs  main.rs  routes.rs
crates/uof-control-plane/: Cargo.toml
crates/uof-control-plane/sql/migrations/: 001_initial.sql  002_desired_states.sql  003_agent_metrics.sql
crates/uof-control-plane/src/: db.rs  lib.rs  models.rs  state.rs
crates/uof-ebpf/: Cargo.toml
crates/uof-ebpf-programs/: Cargo.toml
crates/uof-ebpf-programs/src/: common.rs  event.rs  io.rs  lib.rs  lock.rs  maps.rs  net.rs  sched.rs  syscall.rs  uprobe.rs
crates/uof-ebpf/src/: event.rs  lib.rs  maps.rs
crates/uof-ebpf/src/probes/: io.rs  lock.rs  mod.rs  net.rs  sched.rs  syscall.rs  uprobe.rs
crates/uof-exporter-otlp/: Cargo.toml
crates/uof-exporter-otlp/src/: config.rs  exporter.rs  lib.rs  otlp_client.rs  telemetry.rs
crates/uof-model/: Cargo.toml
crates/uof-model/src/: agent.rs  desired_state.rs  lib.rs  plugin.rs  template.rs
crates/uof-plugin-sdk/: Cargo.toml
crates/uof-plugin-sdk/src/: digest.rs  error.rs  lib.rs  manifest.rs  packager.rs  template.rs
crates/uof-probe-runtime/: Cargo.toml
crates/uof-probe-runtime/examples/: trace_process.rs
crates/uof-probe-runtime/src/: ebpf_loader.rs  lib.rs  probe_loader.rs  process_discovery.rs  ring_buffer_consumer.rs  runtime.rs  symbol_resolver.rs
crates/uof-registry/: Cargo.toml
crates/uof-registry/src/: client.rs  digest.rs  error.rs  lib.rs  manifest.rs
deploy/: README.md  docker-compose.yaml
deploy/otel/: env  otelcol-config.yaml  otelcol-contrib.service  start.sh
deploy/prometheus/: env  prometheus.service  prometheus.yml  start.sh
deploy/prometheus/data/01KS70W5EGVJA6V8ZSVJPE85Y7/: index  meta.json
deploy/prometheus/data/01KS8YNJ3MWQPZDRTB6YMQK9DH/: index  meta.json
deploy/prometheus/data/01KSAWF7Y75C7K79A3THTNA3X1/: index  meta.json
deploy/prometheus/data/01KSCT8S54VV92A793GWPVHHMZ/: index  meta.json
deploy/prometheus/data/01KSER2AE17ZX86X24SJXZYC15/: index  meta.json
deploy/prometheus/data/01KSGNVQ4A7B2B276D77VYTFCK/: index  meta.json
deploy/prometheus/data/01KSJKN8CWTGN00AMEW1QFA0GN/: index  meta.json
deploy/prometheus/data/01KSMHEY6CCC76D5N4CHXH72NW/: index  meta.json
deploy/prometheus/data/01KSPF8FEWJ8XDT10H87FSEXM5/: index  meta.json
deploy/prometheus/data/01KSRD1W4YHRZ69M4CKN823KQZ/: index  meta.json
deploy/prometheus/data/01KSTAVHZTCN9JMDRYW4X2Y6ZD/: index  meta.json
deploy/prometheus/data/01KSW8MYP6ZGTTKG88PDB23SQ6/: index  meta.json
deploy/prometheus/data/01KSY6EMETXSRG26TEB7AXZN38/: index  meta.json
deploy/prometheus/data/01KT0485Q3JH0PQYWW8WJEFJQ8/: index  meta.json
deploy/prometheus/data/01KT221Q0AMQKE0TZTQ9JA0ZFA/: index  meta.json
deploy/prometheus/data/01KT3ZV87DKS6C9FBDXH3N3WTR/: index  meta.json
deploy/prometheus/data/01KT4ME9BQ421A6T1B07G39W2F/: index  meta.json
deploy/prometheus/data/01KT4ME9BQ421A6T1B07G39W2F/chunks/: 000001
deploy/prometheus/data/01KT525WAHE8H9Y0V8APZWKGS4/: index  meta.json
deploy/prometheus/data/01KT525WAHE8H9Y0V8APZWKGS4/chunks/: 000001
deploy/prometheus/data/01KT591KJHZZFRAMZ2Y3J336GG/: index  meta.json
deploy/prometheus/data/01KT591KJHZZFRAMZ2Y3J336GG/chunks/: 000001
deploy/prometheus/data/01KT591KMHZZRSAR52H3QKSCXB/: index  meta.json
deploy/prometheus/data/01KT591KMHZZRSAR52H3QKSCXB/chunks/: 000001
deploy/prometheus/data/01KT5FX68YVKJKVE52A4ABBPSR/: index  meta.json
deploy/prometheus/data/01KT5FX68YVKJKVE52A4ABBPSR/chunks/: 000001
deploy/prometheus/data/01KT5PS22HWGSE7XEVSTP480P1/: index  meta.json
deploy/prometheus/data/01KT5PS22HWGSE7XEVSTP480P1/chunks/: 000001
deploy/prometheus/data/01KT5XMMS0D5K3PYXMG5YR40V6/: index  meta.json
deploy/prometheus/data/01KT5XMMS0D5K3PYXMG5YR40V6/chunks/: 000001
deploy/prometheus/data/01KT5XMN0HQRCWBXTS2RQGY0SF/: index  meta.json
deploy/prometheus/data/01KT64GC0YFWQE06A5BEG6N6RF/: index  meta.json
deploy/prometheus/data/01KT64GC0YFWQE06A5BEG6N6RF/chunks/: 000001
deploy/prometheus/data/01KT7MJKAKNKN4N1M9JGZA4K8T/: index  meta.json
deploy/prometheus/data/01KT7MJKAKNKN4N1M9JGZA4K8T/chunks/: 000001
deploy/prometheus/data/01KT7VEAJJF4H7J1RNE65B1Y6E/: index  meta.json
deploy/prometheus/data/01KT7VEAJJF4H7J1RNE65B1Y6E/chunks/: 000001
deploy/prometheus/data/01KT7VEAQ7DHP2H3542GHDG75X/: index  meta.json
deploy/prometheus/data/01KT82A1TG5YZE23AFG4EJSMAT/: index  meta.json
deploy/prometheus/data/01KT82A1TG5YZE23AFG4EJSMAT/chunks/: 000001
deploy/prometheus/data/01KT895S2JJKGH3J4VJC5TDWJ5/: index  meta.json
deploy/prometheus/data/01KT895S2JJKGH3J4VJC5TDWJ5/chunks/: 000001
deploy/prometheus/data/chunks_head/: 000154  000156  000166
deploy/prometheus/data/wal/: 00000152  00000153  00000154  00000155  00000156  00000157  00000164  00000165  00000166  00000167
deploy/prometheus/data/wal/checkpoint.00000151/: 00000000
deploy/systemd/: README.md  uof-agent.service  uof-control-plane.service
docs/: detailed_design.md  developer_guide.md  operations.md  user_guide.md
docs/superpowers/plans/: 2026-05-09-ebpf-probe-implementation.md  2026-05-13-ebpf-otlp-implementation.md  2026-06-02-ebpf-probes-implementation-plan.md  2026-06-03-project-optimization-plan.md
docs/superpowers/specs/: 2026-05-09-ebpf-probe-design.md  2026-05-12-ebpf-otlp-implementation-design.md  2026-06-02-ebpf-probes-implementation-design.md  2026-06-03-project-optimization-design.md
web_test/: index.html  index_cn.html  index_v2.html
