[workspace]
members = [
    "crates/uof-agent",
    "crates/uof-cli",
    "crates/uof-common",
    "crates/uof-control-api",
    "crates/uof-control-plane",
    "crates/uof-ebpf",
    "crates/uof-exporter-otlp",
    "crates/uof-model",
    "crates/uof-plugin-sdk",
    "crates/uof-probe-runtime",
    "crates/uof-registry",
]
default-members = [
    "crates/uof-cli",
    "crates/uof-control-api",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["UOF Contributors"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_yaml_ng = "0.10"
sha2 = "0.10"
tempfile = "3"
tar = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["trace"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
