[package]
name = "uof-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["serde"] }
uof-plugin-sdk = { path = "../uof-plugin-sdk" }
uof-registry = { path = "../uof-registry" }
