[package]
name = "uof-control-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
uof-common = { path = "../uof-common" }
uof-control-plane = { path = "../uof-control-plane" }
uof-model = { path = "../uof-model" }
