[package]
name = "uof-control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
sqlx.workspace = true
anyhow.workspace = true
chrono.workspace = true
uof-model = { path = "../uof-model" }
