[package]
name = "uof-ebpf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
# Enable this feature only when building for bpfel-unknown-none target
# with `cargo build --target bpfel-unknown-none --features uof-ebpf/probes`
probes = []

[dependencies]
serde = { workspace = true, features = ["derive"] }