[package]
name = "uof-exporter-otlp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true

# OpenTelemetry
opentelemetry = "0.24"
opentelemetry-otlp = "0.17"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }

# gRPC
tonic = { version = "0.12", features = ["prost"] }
prost = "0.13"
tonic-build = "0.12"