[package]
name = "uof-plugin-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
flate2.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true
